--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
@@ -59,7 +59,7 @@
             </p:breadCrumb>
             <h:form id="form">
                 <p:growl id="msgs"/>   
-                <p:dataTable id="products" var="product" scrollable="true" scrollWidth="150%" scrollHeight="300" sortMode="multiple" value="#{productViewEditManagedBean.myCompanyProducts}" editable="true" style="margin-bottom:20px"
+                <p:dataTable id="products" var="product" scrollable="true" scrollWidth="1400"  sortMode="multiple" value="#{productViewEditManagedBean.myCompanyProducts}" editable="true" style="margin-bottom:20px"
                              widgetVar="productsTable"
                              emptyMessage="No product found"
                              resizableColumns="true"
@@ -76,25 +76,25 @@
                     <p:ajax event="rowEditCancel" listener="#{productViewEditManagedBean.onRowCancel}" update=":form:msgs" />
 
 
-                    <p:column filterBy="#{product.productId}" width="45" filterStyle="width:30px" filterMatchMode="exact" headerText="ID">
+                    <p:column filterBy="#{product.productId}" filterMatchMode="exact" headerText="ID">
                         <h:outputText value="#{product.productId}" />
                     </p:column>
 
-                    <p:column filterBy="#{product.productName}" width="90" filterStyle="width: 70px" filterMatchMode="contains" headerText="Product Name">
+                    <p:column filterBy="#{product.productName}" filterMatchMode="contains" headerText="Product Name">
                         <p:cellEditor>
                             <f:facet name="output"><h:outputText value="#{product.productName}" /></f:facet>
                             <f:facet name="input"><p:inputText value="#{product.productName}" style="width:100%" label="Product Name"/></f:facet>
                         </p:cellEditor>
                     </p:column>
 
-                    <p:column filterBy="#{product.description}" width="100%" filterStyle="width: 120px" filterMatchMode="contains" headerText="Product Description">
+                    <p:column filterBy="#{product.description}" style="width:130px" filterMatchMode="contains" headerText="Product Description">
                         <p:cellEditor>
                             <f:facet name="output"><h:outputText value="#{product.description}" /></f:facet>
                             <f:facet name="input"><p:inputText value="#{product.description}" style="width:100%" label="Product Description"/></f:facet>
                         </p:cellEditor>
                     </p:column>
 
-                    <p:column filterBy="#{product.category}" width="120" filterStyle="width: 90px" filterMatchMode="contains" headerText="Product Category">
+                    <p:column filterBy="#{product.category}"  filterMatchMode="contains" headerText="Product Category">
                         <p:cellEditor>
                             <f:facet name="output"><h:outputText value="#{product.category}" /></f:facet>
                             <f:facet name="input">
@@ -105,7 +105,7 @@
                         </p:cellEditor>
                     </p:column> 
 
-                    <p:column filterBy="#{product.productType}" width="100" filterStyle="width: 100px" filterMatchMode="contains" headerText="Product Type">
+                    <p:column filterBy="#{product.productType}" filterMatchMode="contains" headerText="Product Type">
                         <p:cellEditor>
                             <f:facet name="output"><h:outputText value="#{product.productType}" /></f:facet>
                             <f:facet name="input">
@@ -117,7 +117,7 @@
                     </p:column>
 
 
-                    <p:column filterBy="#{product.currency}" width="130" filterStyle="width: 100px" filterMatchMode="contains" headerText="Product Currency">
+                    <p:column filterBy="#{product.currency}" style="width:110px" filterMatchMode="contains" headerText="Product Currency">
                         <p:cellEditor>
                             <f:facet name="output"><h:outputText value="#{product.currency}" /></f:facet>
                             <f:facet name="input">
@@ -129,7 +129,7 @@
                     </p:column> 
 
 
-                    <p:column filterBy="#{product.price}" filterStyle="width: 45px" width="65" filterMatchMode="contains" headerText="Price">
+                    <p:column filterBy="#{product.price}" headerText="Price">
                         <p:cellEditor>
                             <f:facet name="output"><h:outputText value="#{product.price}" /></f:facet>
                             <f:facet name="input"><p:inputText value="#{product.price}" style="width:100%" label="Product Price"/></f:facet>
