Rented bins stock view
- Yunnie

--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -55,6 +55,10 @@
                     <p:menuitem value="View Incoming Internal Orders" url="viewincomingorders.xhtml"/>
                     <p:menuitem value="View Outgoing Internal Orders" url="viewoutgoingorders.xhtml"/>
                 </p:submenu>
+                <p:submenu label="Rented Bins Management" styleClass="display:block" >
+                    <p:menuitem value="View Rented Bins" url="viewrentedbins.xhtml"/>
+                    <p:menuitem value="View Stock In Rented Bins" url="viewstockinrentedbins.xhtml"/>
+                </p:submenu>
                 <p:submenu label="External Warehouse Request Orders" styleClass="display:block" >
                     <p:menuitem value="Create External Warehouse Request" url="createwarehouserequest.xhtml"/>
                     <p:menuitem value="View All External Orders" url="viewallpendingrequests.xhtml"/>
