--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstock.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstock.xhtml
@@ -71,7 +71,7 @@
 
         <ui:define name="right">
             <p:tabView id = "tv">
-                <p:tab title="View Available Stocks in a Warehouse">
+                <p:tab title="View Stocks in a Warehouse">
 
                     <p:panel id="panel2" header=" View Stocks">
                         <h:form id="formMain2">
@@ -206,7 +206,7 @@
                     </p:panel>     
                 </p:tab>
 
-                <p:tab title="View All Available Stocks">
+                <p:tab title="View All Stocks">
                     <p:panel id="panel" header=" View Stocks">
                         <h:form id="formMain">
                             <p:ajaxStatus style="width:16px;height:16px;">
@@ -228,7 +228,7 @@
                                 <p:radioButton id="id00" for="myRadioID" itemIndex="0"/>
                                 <h:outputLabel for="id00" value="Choose Product ID "/>
 
-                                <p:selectOneMenu id="product" value="#{stockViewEditManagedBean.productId}"  style="width:200px" disabled="#{stockViewEditManagedBean.radioValue != '1'}">
+                                <p:selectOneMenu id="product" value="#{stockViewEditManagedBean.productId2}"  style="width:200px" disabled="#{stockViewEditManagedBean.radioValue != '1'}">
                                     <f:selectItem itemLabel="Select Product ID" itemValue="" noSelectionOption="true" />
                                     <f:selectItems value="#{stockViewEditManagedBean.productList}" var="product" itemLabel="ID:#{product.productId}   Name:#{product.productName}" itemValue="#{product.productId}"/>
                                     <p:ajax listener="#{stockViewEditManagedBean.viewAllStocks()}" update=":tv:datafield" />
@@ -236,7 +236,7 @@
 
                                 <p:radioButton id="id01" for="myRadioID" itemIndex="1"/>
                                 <h:outputLabel for="id01" value="Enter Product ID "/>
-                                <p:inputText id="input01" value="#{stockViewEditManagedBean.productId}" disabled="#{stockViewEditManagedBean.radioValue != '2'}">
+                                <p:inputText id="input01" value="#{stockViewEditManagedBean.productId2}" disabled="#{stockViewEditManagedBean.radioValue != '2'}">
                                     <p:ajax listener="#{stockViewEditManagedBean.viewAllStocks()}" update=":tv:datafield" />
                                 </p:inputText>
                             </h:panelGrid>
@@ -263,7 +263,7 @@
                                     <h:outputText value="ID: #{stock.storageBin.warehouseZone.warehouse.warehouseId} Name: #{stock.storageBin.warehouseZone.warehouse.name}"  />
                                 </p:column>
                                 <p:column filterBy="#{stock.storageBin.warehouseZone.warehouseZoneId}" filterStyle="width:60px" filterMatchMode="contains" headerText="Zone" >
-                                    <h:outputText value="ID: #{stock.storageBin.warehouseZone.warehouseZoneId} Name:#{stock.storageBin.warehouseZone.warehouseZoneId} " />
+                                    <h:outputText value="ID: #{stock.storageBin.warehouseZone.warehouseZoneId} Name:#{stock.storageBin.warehouseZone.name} " />
                                 </p:column>
                                 <p:column filterBy="#{stock.storageBin.storageBinId}" filterStyle="width:60px" filterMatchMode="contains" headerText="Storage Bin ID" >
                                     <h:outputText value="#{stock.storageBin.storageBinId}"/>
@@ -324,6 +324,103 @@
                             <p:messages id="messages" autoUpdate="true" closable="true" />
                             <br></br>
                             <p:outputLabel id="totalQuantity" value="Total Available Quantity: #{stockViewEditManagedBean.totalQuantity}" />
+                        </h:form>
+                    </p:panel>                           
+                </p:tab>
+
+                <p:tab title="View Client Stock in my Warehouses">
+                    <p:panel id="panel3" header=" View Stocks">
+                        <h:form id="formMain3">
+                            <p:ajaxStatus style="width:16px;height:16px;">
+                                <f:facet name="start">
+                                    <h:graphicImage value="/img/load.gif" />
+                                </f:facet>
+                                <f:facet name="complete">
+                                    <h:outputText value="" />
+                                </f:facet>
+                            </p:ajaxStatus>
+
+                            <p:selectOneRadio id="myRadioID" value="#{stockViewEditManagedBean.radioValue}" layout="custom">
+                                <f:selectItem itemLabel="Choose ID" itemValue="1"/>
+                                <f:selectItem itemLabel="Enter " itemValue="2"/>
+                                <p:ajax process="@this" update="formMain3" />
+                            </p:selectOneRadio>
+
+                            <h:panelGrid columns="7" id="area">
+                                <p:radioButton id="id00" for="myRadioID" itemIndex="0"/>
+                                <h:outputLabel for="id00" value="Choose Product ID "/>
+
+                                <p:selectOneMenu id="product" value="#{stockViewEditManagedBean.productId3}"  style="width:200px" disabled="#{stockViewEditManagedBean.radioValue != '1'}">
+                                    <f:selectItem itemLabel="Select Product ID" itemValue="" noSelectionOption="true" />
+                                    <f:selectItems value="#{stockViewEditManagedBean.productList}" var="product" itemLabel="ID:#{product.productId}   Name:#{product.productName}" itemValue="#{product.productId}"/>
+                                    <p:ajax listener="#{stockViewEditManagedBean.viewClientStockInRentedBin()}" update=":tv:datafield3" />
+                                </p:selectOneMenu>
+
+                                <p:radioButton id="id01" for="myRadioID" itemIndex="1"/>
+                                <h:outputLabel for="id01" value="Enter Product ID "/>
+                                <p:inputText id="input01" value="#{stockViewEditManagedBean.productId3}" disabled="#{stockViewEditManagedBean.radioValue != '2'}">
+                                    <p:ajax listener="#{stockViewEditManagedBean.viewClientStockInRentedBin()}" update=":tv:datafield3" />
+                                </p:inputText>
+                            </h:panelGrid>
+                        </h:form>
+
+                        <h:form id="datafield3" >
+                            <p:dataTable id="stockData" var="stock"  scrollable="true" scrollWidth="1500"  sortMode="multiple" editable="true" value="#{stockViewEditManagedBean.stocks}" 
+                                         widgetVar="stockTable"
+                                         emptyMessage="No such stock found"
+                                         resizableColumns="true"
+                                         rowKey="#{stock.stockId}">
+
+                                <f:facet name="header">                    
+                                    <p:outputPanel>
+                                        <h:outputText value="Search Stock fields:" />
+                                        <p:inputText id="globalFilter" onkeyup="PF('stockTable').filter()" />
+                                    </p:outputPanel>
+                                </f:facet>           
+
+                                <p:column  headerText="Rented Company ID" filterStyle="width:60px" filterBy="#{stock.storageBin.rentedCompanyId}" filterMatchMode="contains">
+                                    <h:outputText value="#{stock.storageBin.rentedCompanyId}" />
+                                </p:column>
+                                <p:column filterBy="#{stock.storageBin.warehouseZone.warehouse.warehouseId}" filterStyle="width:60px" filterMatchMode="contains" headerText="Warehouse" >
+                                    <h:outputText value="ID: #{stock.storageBin.warehouseZone.warehouse.warehouseId} Name: #{stock.storageBin.warehouseZone.warehouse.name}"  />
+                                </p:column>
+                                <p:column filterBy="#{stock.storageBin.warehouseZone.warehouseZoneId}" filterStyle="width:60px" filterMatchMode="contains" headerText="Zone" >
+                                    <h:outputText value="ID: #{stock.storageBin.warehouseZone.warehouseZoneId} Name:#{stock.storageBin.warehouseZone.warehouseZoneId} " />
+                                </p:column>
+                                <p:column filterBy="#{stock.storageBin.storageBinId}" filterStyle="width:60px" filterMatchMode="contains" headerText="Storage Bin ID" >
+                                    <h:outputText value="#{stock.storageBin.storageBinId}"/>
+                                </p:column>
+                                <p:column filterBy="#{stock.stockId}" filterStyle="width:60px" filterMatchMode="contains" headerText="Stock ID" >
+                                    <h:outputText value="#{stock.stockId}" />
+                                </p:column>
+
+                                <p:column  filterBy="#{stock.name}" filterStyle="width:60px" filterMatchMode="contains" headerText="Stock Name">
+                                    <h:outputText value="#{stock.name}" />
+                                </p:column> 
+
+                                <p:column  headerText="Comments" filterStyle="width:60px" filterBy="#{stock.comments}" filterMatchMode="contains">
+                                    <p:inputText value="#{stock.comments}" style="width:100%" label="Comments"/>
+                                </p:column>
+
+                                <p:column  headerText="Available Quantity" filterStyle="width:60px" filterBy="#{stock.availableStock}" filterMatchMode="contains">
+                                    <h:outputText value="#{stock.availableStock}" />
+                                </p:column> 
+
+                                <p:column  headerText="Reserve Quantity" filterStyle="width:60px" filterBy="#{stock.reservedStock}" filterMatchMode="contains">
+                                    <h:outputText value="#{stock.reservedStock}" />
+                                </p:column>
+
+                                <p:column  headerText="Expiry Date" filterStyle="width:60px" filterBy="#{stock.expiryDate}" filterMatchMode="contains">
+                                    <h:outputText value="#{stock.expiryDate}" />
+
+                                </p:column>
+
+                                <p:column  headerText="Created Date" filterStyle="width:60px" filterBy="#{stock.createdDate}" filterMatchMode="contains">
+                                    <h:outputText value="#{stock.createdDate}" />
+                                </p:column>
+                            </p:dataTable>
+                            <p:messages id="messages" autoUpdate="true" closable="true" />
+                            <br></br>
                         </h:form>
                     </p:panel>                           
                 </p:tab>
