--- a/MerlionPortal/MerlionPortal-war/web/crms/viewservicepodetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewservicepodetail.xhtml
@@ -152,9 +152,9 @@
                             <h:outputText value="#{viewServicePODetailManagedBean.selectedServicePO.contract.serviceQuotation.quantityPerMonth}" />
 
                             <p:outputLabel value="Origin:" /><p:spacer width="20" height="20" />
-                            <h:outputText value="#{viewServicePODetailManagedBean.selectedServicePO.contract.origin}" />
+                            <h:outputText value="#{viewServicePODetailManagedBean.origin}" />
                             <p:outputLabel value="Destination:" /><p:spacer width="20" height="20" />
-                            <h:outputText value="#{viewServicePODetailManagedBean.selectedServicePO.contract.destination}" />
+                            <h:outputText value="#{viewServicePODetailManagedBean.destination}" />
                             <p:outputLabel value="Final Contract Price Per TEU:" /><p:spacer width="20" height="20" />
                             <h:outputText value="#{viewServicePODetailManagedBean.selectedServicePO.contract.price}" />
                         </c:if>
