--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -22,7 +22,7 @@
         <ui:define name="left">
             <p:menu styleClass="menu-width">
                 <p:submenu label =" WMS HOME" styleClass="display:block">
-                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender" />
                 </p:submenu>
                 <p:submenu label =" Warehouse" styleClass="display:block">
                     <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
@@ -48,12 +48,12 @@
                 <p:submenu label="Stock Transport Order" styleClass="display:block" >
                     <p:menuitem value="Create Transport Order" url="createtransportorder.xhtml"/>
                     <p:menuitem value="View Transport Order To Be Procssed" url="viewsourcetransportorder.xhtml"/>
-                    <p:menuitem value="All IncomingTransport Orders" url="viewdesttransportorder.xhtml"/>
+                    <p:menuitem value="All Incoming Transport Orders" url="viewdesttransportorder.xhtml"/>
                 </p:submenu>
                 <p:submenu label="Internal Warehouse Request Orders" styleClass="display:block" >
                     <p:menuitem value="Create Internal Warehouse Request" url="createinternalwo.xhtml"/>
-                    <p:menuitem value="View Incoming Internal Orders" url="viewincomingorders.xhtml"/>
-                    <p:menuitem value="View Outgoing Internal Orders" url="viewoutgoingorders.xhtml"/>
+                    <p:menuitem value="View Incoming Orders" url="viewincomingorders.xhtml"/>
+                    <p:menuitem value="View Fulfillment Orders" url="viewoutgoingorders.xhtml"/>
                 </p:submenu>
                 <p:submenu label="Rented Bins Management" styleClass="display:block" >
                     <p:menuitem value="View Rented Bins" url="viewrentedbins.xhtml"/>
