width of graph-Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/mrp/forecastviewhistory.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/forecastviewhistory.xhtml
@@ -51,7 +51,7 @@
             </p:breadCrumb>
             <h:form>
                 <p:panel header="View Sales History in the past 24 months" style="margin-bottom:10px;">
-                    <p:chart type="line" model="#{forecastShowHistoryManagedBean.purchaseHistory}" style="height:300px" />
+                    <p:chart type="line" model="#{forecastShowHistoryManagedBean.purchaseHistory}" style="width:730px"/>
                 </p:panel>
 
                 <p:panel header="Based on the available sales history, do you want to proceed?" style="margin-bottom:10px;"> 
