WMS view internal order- Manli

--- a/MerlionPortal/MerlionPortal-war/web/wms/viewincomingorders.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewincomingorders.xhtml
@@ -117,7 +117,7 @@
                                 </p:column>
 
                                 <p:column headerText="">
-                                    <p:commandButton action="#{transportOrderManagedBean.getDestOrder(transportOrder)}" value="Process Order">
+                                    <p:commandButton  value="Process Order">
                                     </p:commandButton> 
                                 </p:column>
                             </p:dataTable>
@@ -176,7 +176,7 @@
                                 </p:column>
 
                                 <p:column headerText="">
-                                    <p:commandButton action="#{transportOrderManagedBean.getDestOrder(transportOrder)}" value="Process Order">
+                                    <p:commandButton  value="Process Order">
                                     </p:commandButton> 
                                 </p:column>
                             </p:dataTable>
